traefik-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: traefik
    meta.helm.sh/release-namespace: kube-system
  creationTimestamp: "2024-05-22T19:56:48Z"
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  labels:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: traefik
    helm.sh/chart: traefik-34.2.1_up34.2.0
  name: traefik
  namespace: kube-system
  resourceVersion: "51083409"
  uid: d2ecc6d4-3e8e-45bd-9a8c-a9442ccbc2e1
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.43.152.113
  clusterIPs:
  - 10.43.152.113
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: PreferDualStack
  loadBalancerIP: 10.0.0.137   # <<< 👈 PINNED HERE!
  ports:
  - name: web
    nodePort: 31323
    port: 80
    protocol: TCP
    targetPort: web
  - name: websecure
    nodePort: 31289
    port: 443
    protocol: TCP
    targetPort: websecure
  selector:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 10.0.0.137
      ipMode: VIP
    - ip: 10.0.0.139
      ipMode: VIP
