pireborn-ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pireborn-ingress-dev
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
    relic-wielder.com/battle-retry: "1"  # 👈 Dummy annotation to force reapply
spec:
  rules:
    - host: dev.aaronescoto.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pireborn
                port:
                  number: 80
  tls:
    - hosts:
        - dev.aaronescoto.com
      secretName: pireborn-dev-tls
